bookmarking and testing of bookmarks. I love spring boot